eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: golang-api
spec:
  selector:
    app: golang-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
