eks/ex.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-replica
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-nginx
      release: spring
  template:
    metadata:
      labels:
        app: sample-nginx
        release: spring
    spec:
      containers:
      - name: sample-nginx
        image: nginx
        ports:
          - containerPort: 80
            protocol: TCP
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: "sample-service"
spec:
  type: NodePort
  selector:
    app: sample-nginx
    release: spring 
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sample-service
            port: 
              number: 80
