eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-api-ingress
  labels:
    name: golang-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: golang-api
            port: 
              number: 80
